[gd_scene load_steps=4 format=3 uid="uid://bdo5eluxqi4p5"]

[ext_resource type="Texture2D" uid="uid://864i0d0etql3" path="res://seamless-rust-texture.jpg" id="1_d33jj"]
[ext_resource type="Script" path="res://Sound.gd" id="2_86t10"]
[ext_resource type="AudioStream" uid="uid://dag63nfpjnn8d" path="res://geiger_sound_1.wav" id="3_i51fl"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_d33jj")
expand_mode = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/CenterContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/CenterContainer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "Time To Click"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SoundTimerLabel" type="Label" parent="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
text = "0.0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="BackgroundRadiation" type="CheckButton" parent="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
text = "Hintergrund Radioaktivit√§t"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="RadLevelLabel" type="Label" parent="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Gefahren Level"

[node name="RadLevelColor" type="ColorRect" parent="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
color = Color(0, 1, 0, 1)

[node name="RadLevel" type="HSlider" parent="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 20.0
step = 0.1

[node name="Play" type="Button" parent="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
tooltip_text = "Leertaste"
text = "Abspielen"

[node name="Script" type="Node" parent="."]
script = ExtResource("2_86t10")

[node name="Geiger" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_i51fl")

[connection signal="toggled" from="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/MarginContainer2/HBoxContainer/BackgroundRadiation" to="Script" method="_on_background_radiation_toggled"]
[connection signal="value_changed" from="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/RadLevel" to="Script" method="_on_rad_level_value_changed"]
[connection signal="pressed" from="CanvasLayer/Control/CenterContainer/PanelContainer/MarginContainer/VBoxContainer/Play" to="Script" method="_on_button_pressed"]
